Commit: Tracking Incoming Player
- Create a game mode
- Track incoming Player

--- a/MPTesting/MPTesting.uproject
+++ b/MPTesting/MPTesting.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "MPTesting",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
